[package]
name = "federation-core"
version = "0.1.0"
publish = false  # workspace-internal; never published to crates.io
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed federation + IndieWeb contract — closed FederationProtocol enum (ActivityPub W3C Rec, Webmention W3C Rec, WebSub W3C Rec, Nostr NIP-01, AT Protocol). Per-protocol clients plug in via FederationPublisher trait."

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde", "serde-well-known", "macros"] }
