# integration-audit-allow: contract-first crate; runtime consumer queued — see docs/INTEGRATION_COVERAGE.md
[package]
name = "forge-auth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Typed auth surface for Forge: AuthMethod, AuthProvider, MfaMethod, AuthSession. Passwordless / MFA / WebAuthn / OAuth — closed enums + pluggable provider trait."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde", "serde-well-known"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
