[package]
name = "forge-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge-core = { path = "../forge-core" }
forge-phases = { path = "../forge-phases" }
# T33: manifest-gate CLI uses the keystone types directly.
manifest-core = { path = "../manifest-core" }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# T44: filesystem-watch loop for `forge watch`. notify is the
# standard Rust file-watcher crate (mature, single-author-
# maintained, ~3 transitive deps). Mom-class UX: edit your CMS,
# see findings stream as you save.
notify = "6"

[dev-dependencies]
# T33: manifest-gate tests write fixture phases.toml + backends.toml
# into a tempdir and run run_manifest_validate against it.
tempfile = { workspace = true }
