[package]
name = "forge-cli"
version = "0.1.0"
publish = false  # workspace-internal; never published to crates.io
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge-core = { path = "../forge-core" }
forge-phases = { path = "../forge-phases" }
# T33: manifest-gate CLI uses the keystone types directly.
manifest-core = { path = "../manifest-core" }
# T91 (first wiring): privacy-core (T76) drives the new
# `forge privacy validate` subcommand — projects privacy.toml at
# the project root through DataCategory + LawfulBasis enums +
# RetentionPolicy + ConsentScope to enforce GDPR-shape integrity
# at the type level. Takes privacy-core off the orphan list.
privacy-core = { path = "../privacy-core" }
# T91 (second wiring): trust-safety-core (T75) drives the new
# `forge trust-safety validate` subcommand — projects
# trust-safety.toml through the closed ConcernKind enum to enforce
# scanner coverage. Every mandatory-report concern (CSAM / NCIII /
# Extremism) MUST have a declared scanner; non-mandatory concerns
# warn when missing.
trust-safety-core = { path = "../trust-safety-core" }
# T91 (third wiring): manifest-attest (T64) drives the new
# `forge attest fingerprint` subcommand — reads
# reports/attest-pubkey.b64 + projects through the typed
# KeyFingerprint = base64url(SHA256(verifying-key))[..16]. Used by
# operator-facing log lines + attestation metadata.
manifest-attest = { path = "../manifest-attest" }
# T91 (fourth wiring): domains-core (T86) drives the new
# `forge domains validate` subcommand — projects domains.toml
# through DomainKind / AcmeChallenge / HstsPolicy and asserts
# RFC 1035 FQDN shape + RFC 8555 wildcard/challenge compatibility
# + HSTS preload-eligibility.
domains-core = { path = "../domains-core" }
# T91 (fifth wiring): observability-core (T69) drives the new
# `forge audit-log verify` subcommand — loads an audit-log JSON
# file + projects through AuditChain::verify (hash-chained
# integrity check). Used for compliance audits + tamper-evident
# admin-action logs.
observability-core = { path = "../observability-core" }
# Base64 decode for the fingerprint subcommand (forge-core stores
# the pubkey as base64).
base64 = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# T44: filesystem-watch loop for `forge watch`. notify is the
# standard Rust file-watcher crate (mature, single-author-
# maintained, ~3 transitive deps). Mom-class UX: edit your CMS,
# see findings stream as you save.
notify = "6"

[dev-dependencies]
# T33: manifest-gate tests write fixture phases.toml + backends.toml
# into a tempdir and run run_manifest_validate against it.
tempfile = { workspace = true }
