[package]
name = "forge-cli"
version = "0.1.0"
publish = false  # workspace-internal; never published to crates.io
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge-core = { path = "../forge-core" }
forge-phases = { path = "../forge-phases" }
# T101 codegen library — emits a complete-Rust-stack runtime crate
# from cms/*.json + backends.toml. CLI wiring lives in forge-cli.
forge-codegen = { path = "../forge-codegen" }
# T101: loom-cms-render types used directly by run_codegen to
# parse cms/*.json into the CmsPage tree passed to forge-codegen.
loom-cms-render = { git = "https://github.com/thepictishbeast/PlausiDen-Loom.git", branch = "main" }
# T33: manifest-gate CLI uses the keystone types directly.
manifest-core = { path = "../manifest-core" }
# T91 (first wiring): privacy-core (T76) drives the new
# `forge privacy validate` subcommand — projects privacy.toml at
# the project root through DataCategory + LawfulBasis enums +
# RetentionPolicy + ConsentScope to enforce GDPR-shape integrity
# at the type level. Takes privacy-core off the orphan list.
privacy-core = { path = "../privacy-core" }
# T91 (second wiring): trust-safety-core (T75) drives the new
# `forge trust-safety validate` subcommand — projects
# trust-safety.toml through the closed ConcernKind enum to enforce
# scanner coverage. Every mandatory-report concern (CSAM / NCIII /
# Extremism) MUST have a declared scanner; non-mandatory concerns
# warn when missing.
trust-safety-core = { path = "../trust-safety-core" }
# T91 (third wiring): manifest-attest (T64) drives the new
# `forge attest fingerprint` subcommand — reads
# reports/attest-pubkey.b64 + projects through the typed
# KeyFingerprint = base64url(SHA256(verifying-key))[..16]. Used by
# operator-facing log lines + attestation metadata.
manifest-attest = { path = "../manifest-attest" }
# T91 (fourth wiring): domains-core (T86) drives the new
# `forge domains validate` subcommand — projects domains.toml
# through DomainKind / AcmeChallenge / HstsPolicy and asserts
# RFC 1035 FQDN shape + RFC 8555 wildcard/challenge compatibility
# + HSTS preload-eligibility.
domains-core = { path = "../domains-core" }
# T91 (fifth wiring): observability-core (T69) drives the new
# `forge audit-log verify` subcommand — loads an audit-log JSON
# file + projects through AuditChain::verify (hash-chained
# integrity check). Used for compliance audits + tamper-evident
# admin-action logs.
observability-core = { path = "../observability-core" }
# T91 (sixth wiring): forms-core (T81) drives the new
# `forge forms validate` subcommand — projects forms.toml
# through Form::validate (https-only webhook, WCAG-required
# labels, single-honeypot, kebab-case field ids).
forms-core = { path = "../forms-core" }
# T91 (seventh wiring): federation-core (T79) drives the new
# `forge federation validate` subcommand — projects
# federation.toml through FederationProtocol + protocol-
# discriminated FederationAddress and asserts protocol/address
# match + no duplicate destinations.
federation-core = { path = "../federation-core" }
# T91 (eighth wiring): email-core (T83) drives the new
# `forge email validate` subcommand — projects email.toml's
# declared sender domains + DMARC posture through MessageKind
# / DmarcResult / BimiReference + enforces RFC 8058 list-
# unsubscribe rules for marketing messages.
email-core = { path = "../email-core" }
# T91 (ninth wiring): commerce-storefront-core (T84) drives
# the new `forge commerce validate` subcommand — projects
# commerce.toml through Product + Variant + CurrencyCode and
# asserts ISO 4217 currency + non-negative price + non-empty
# SKU + non-empty variants per product.
commerce-storefront-core = { path = "../commerce-storefront-core" }
# T91 (tenth wiring): memberships-core (T85) drives the new
# `forge memberships validate` subcommand — projects
# memberships.toml through Tier::validate (kebab-case id +
# non-empty name + non-negative price + ISO 4217 currency).
memberships-core = { path = "../memberships-core" }
# T98 (first runtime wiring): importers-core (T77) drives
# `forge content validate` — parses a CmsSection JSON file +
# runs the typed validate() invariants (slug kebab, single
# Hero, image alt non-empty, heading levels in 1..=6).
importers-core = { path = "../importers-core" }
# T98 (second runtime wiring): exporters-core (T78) drives
# `forge content export --format X` — projects a CmsSection
# through the built-in Markdown / JSON / JSON-LD renderers.
exporters-core = { path = "../exporters-core" }
# T98 (third runtime wiring): search-core (T82) drives
# `forge search validate-index` — parses a JSON array of
# IndexDoc and asserts shape invariants (non-empty id /
# title / body, BCP-47 lang stem, no duplicate ids).
search-core = { path = "../search-core" }
# T98 (fourth runtime wiring): assets-core (T80) drives
# `forge assets validate` — parses an AssetBundle JSON file
# and calls validate_image_ladder() to refuse publication of
# bundles missing the AVIF/WebP/JPEG fallback ladder or
# empty alt text (WCAG 2.1 §1.1.1).
assets-core = { path = "../assets-core" }
# 2026-05-20 runtime wiring: doctrine-core drives
# `forge doctrine query` — loads + queries the AVP-Doctrine
# 71-rule database (build / primitives / security / testing /
# docs / logging / perf / content / accessibility) with the
# statement+rationale+enforcement triple per task #173.
doctrine-core = { path = "../doctrine-core" }
# Base64 decode for the fingerprint subcommand (forge-core stores
# the pubkey as base64).
base64 = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# T44: filesystem-watch loop for `forge watch`. notify is the
# standard Rust file-watcher crate (mature, single-author-
# maintained, ~3 transitive deps). Mom-class UX: edit your CMS,
# see findings stream as you save.
notify = "6"

[dev-dependencies]
# T33: manifest-gate tests write fixture phases.toml + backends.toml
# into a tempdir and run run_manifest_validate against it.
tempfile = { workspace = true }
