[package]
name = "forge-core"
version = "0.1.0"
publish = false  # workspace-internal; never published to crates.io
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Forge — types, traits, and small helpers shared across all phases. No I/O, no platform-specific code."

[dependencies]
thiserror.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
base64 = { workspace = true }
# Per-tenant corpora loader (PER_TENANT_CORPORA.md spec, commit
# f02fff0). Read the [tenant_corpus] section of forge.toml into
# the typed TenantCorpus struct; fail-tolerant (None on missing /
# malformed, never blocks the build).
toml = { version = "0.8", default-features = false, features = ["parse"] }

[dev-dependencies]
# T26: property-based tests on the Merkle chain step + verify.
proptest = { workspace = true }

[lints.rust]
# AVP-2 Tier 1: deny unsafe outside annotated SAFETY blocks.
unsafe_code = "deny"
unused_must_use = "deny"
missing_docs = "warn"

[lints.clippy]
# AVP-2 gate: no unwrap/expect in lib code without justification.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
