# integration-audit-allow: contract-first crate; runtime consumer queued — see docs/INTEGRATION_COVERAGE.md
[package]
name = "forge-critic"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false  # workspace-internal
description = "The Critic trait + LlmProvider seam. Every AI proposal flows through evaluate() → Decision. NoopCritic for no-AI pipelines; LlmCritic for LLM-as-evaluator. The LFI-backed Critic lives downstream in Forge-LFI (feature \"lfi\")."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
