[package]
name = "forge-mcp"
version = "0.1.0"
edition.workspace = true
description = "Forge substrate MCP server — exposes forge build/orient/audit/doctrine as JSON-RPC tools for token-efficient Claude / Codex / Cursor interaction. Per paul 2026-05-21."

[[bin]]
name = "forge-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "io-util", "macros", "process"] }
