[package]
name = "forge-phases"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
forge-core = { path = "../forge-core" }
sha2 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# T52: typed JSON parse of Crawler diff.json output. Supersociety
# doctrine: never scrape stdout text when the source emits JSON
# — typed deserialization eliminates an entire class of parser
# drift bugs.
serde = { workspace = true }
serde_json = { workspace = true }
# T70: phase_render uses Loom's CMS renderer IN-PROCESS, not via
# subprocess. Owner directive 2026-05-13: forge actually
# generates content via the CMS, doesn't merely delegate.
# Path dep on the sibling repo for now; vendoring or a workspace
# merge tracked in T70b/T70c.
loom-cms-render = { path = "/home/user/Development/PlausiDen/PlausiDen-Loom/loom-cms-render" }
# T39: phase_loom_lint wraps loom-lint's CSS rules + view-class
# rules into a Forge phase. RawColour = strict; RawSpacing /
# RawTime = warn. Same path-dep shape as loom-cms-render.
loom-lint = { path = "/home/user/Development/PlausiDen/PlausiDen-Loom/loom-lint" }

[dev-dependencies]
# T51: property-based tests on the theme_consistency parser.
# AVP-2 Tier 6 mandates proptest for any phase that ingests
# arbitrary input (here: arbitrary CSS bytes).
proptest = { workspace = true }

[lints.rust]
# AVP-2 Tier 1: deny unsafe outside annotated SAFETY blocks.
unsafe_code = "deny"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
